removed unnecessary css; spacing for concept text; bad break in page header fixed

--- a/galeriehome/static/home/styles/big-main.less
+++ b/galeriehome/static/home/styles/big-main.less
@@ -1,61 +1,5 @@
-@import (less) "gradient.less";
 
-@imgdir: "/static/home/images";
-@nav-bg-color: rgba(0, 0, 0, 0.7);
-
-body {
-    height: 100%;
+#anoano-name {
+    display: inline;
+    margin-left: 25px;
 }
-
-.cover-background {
-    background: url("@{imgdir}/big-cover.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-#main-content {
-    margin-bottom: 4em;
-}
-
-#main-navigation {
-    width: 100%;
-}
-
-.on-top( @height ) {
-    position: relative;
-    height: @height;
-    margin-top: -@height;
-}
-
-#gradient-above-nav {
-    .gradient-up( @nav-bg-color, transparent );
-    .on-top( 100px );
-}
-
-.extra-padding {
-    padding-left: 60px;
-    padding-right: 60px;
-}
-
-.anoano-nav-button {
-    font-size: 22px;
-    margin: 1em 0;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    border-radius: 12px;
-}
-
-.fixed-bottom-left {
-    position: fixed;
-    bottom: 16px;
-    left: 16px;
-}
-
-.fixed-top-right {
-    position: fixed;
-    top: 16px;
-    right: 16px;
-}
-
