--- a/galeriehome/static/home/styles/pages/concept.less
+++ b/galeriehome/static/home/styles/pages/concept.less
@@ -1,5 +1,7 @@
 #concept-text {
     line-height: 1.6;
+    margin-top: 7em;
+    margin-bottom: 4em;
 }
 
 .concept-image {
